[package]
name = "tslib"
categories = [
    "embedded",
    "no-std",
]
version = "0.1.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>"]

[dependencies]
nb = "0.1.1"
cortex-m = "0.5.1"
embedded-hal = "0.2.1"
stm32f103xx = "0.10.0"

[dev-dependencies]
panic-abort = "0.1.1"
cortex-m-rt = "0.5.0"
stm32f103xx = { version = "0.10.0", features = ["rt"] }

[features]
doc = []
rt = ["stm32f103xx/rt"]
